--- a/ToDoServer/appsettings.json
+++ b/ToDoServer/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ToDoDB": "server=localhost;user=root;password=LEA@6561;database=ToDoDB"
+    "ToDoDB": "server=mysql://u59yqsvvgeu51dai:cswzmQyF1IBIvQxwlpMR@bstb8t7djxp4h4xbbbap-mysql.services.clever-cloud.com:3306/bstb8t7djxp4h4xbbbap;user=roou59yqsvvgeu51dait;password=cswzmQyF1IBIvQxwlpMR;database=ToDbstb8t7djxp4h4xbbbapoDB;port=3306;"
   },
   "Jwt": {
     "Key": "your-very-secure-key-that-is-at-least-32-characters-long-for-production",
