--- a/ToDoServer/appsettings.json
+++ b/ToDoServer/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ToDoDB": "server=mysql://u59yqsvvgeu51dai:cswzmQyF1IBIvQxwlpMR@bstb8t7djxp4h4xbbbap-mysql.services.clever-cloud.com:3306/bstb8t7djxp4h4xbbbap;user=roou59yqsvvgeu51dait;password=cswzmQyF1IBIvQxwlpMR;database=ToDbstb8t7djxp4h4xbbbapoDB;port=3306;"
+    "ToDoDB": "Server=bstb8t7djxp4h4xbbbap-mysql.services.clever-cloud.com;Port=3306;Database=bstb8t7djxp4h4xbbbap;Uid=u59yqsvvgeu51dai;Pwd=cswzmQyF1IBIvQxwlpMR;"
+
   },
   "Jwt": {
     "Key": "your-very-secure-key-that-is-at-least-32-characters-long-for-production",
